Updated pagage.json to ensure all dependencies are listed

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Craishot/localjolt.git"
   },
-  "author": "Group 12",
+  "author": "Trentin Gillis",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Craishot/localjolt/issues"
