Add express session and update corperate coffee shop list

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^5.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "markerwithlabel": "^2.0.1",
     "mongoose": "^5.0.14",
     "nodemon": "^1.17.1",
